--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="/spinner.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
     <input type="file" name="image" id="file" style="display: none" />
-    <p><label for="file" style="cursor: pointer">Upload Image</label></p>
-    <img id="output" width="200" />
+		<label for="file" style="cursor: pointer">Upload Image</label>
+    <img id="output" style="width:200px;transition: all 5s" />
     <canvas
       id="myCanvas"
       width="220"
@@ -18,6 +19,22 @@
     >
       Your browser does not support the HTML5 canvas tag.</canvas
     >
+		<div id="loading" style="display:none;position:absolute;align-items:center;justify-content:center;" class="container gray">
+      <div class="ispinner gray" style="margin:auto">
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+        <div class="ispinner-blade"></div>
+      </div>
+    </div>
     <script src="./inkcov.js"></script>
   </body>
 </html>
