96dpi ajustment in order to have corect dimensions. will screen makers will change this 96 in the future?

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <body>
     <input type="file" name="image" id="file" style="display: none" />
-		<label for="file" style="cursor: pointer">Upload Image</label>
+		<label for="file" style="cursor: pointer">Încarcă eticheta</label>
     <img id="output" style="width:200px;transition: all 5s" />
     <canvas
-      id="myCanvas"
+      id="draw_image"
       width="220"
       height="277"
       style="border: 1px solid #d3d3d3; display: none"
